# ai-interior-designer

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
catalog/seed/: SCHEMA.md  bedroom.json
chat/: app.py
chat/routes/: __init__.py  catalog.py  health.py  plans.py  scans.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/lib/: api.ts
frontend/src/routes/: ChatPage.tsx  PreviewPage.tsx  UploadPage.tsx
frontend/src/three/: RoomPreviewScene.tsx  furniture_assets.ts
ingest/: parser.py
llm/: image_gen.py  orchestrator.py  verify.py
llm/prompts/: extract_intent.md  repair_drops.md
scripts/: dev.sh  make_roomplan_fixture.py  verify.sh
solver/: layout.py
tests/: conftest.py  test_anchor_to_wall.py  test_catalog.py  test_parser.py  test_parser_roomplan.py  test_plan_images.py  test_plans_multipart.py  test_plans_stream.py  test_repair_retry.py  test_smoke.py  test_solver.py  test_validate_and_repair.py  test_verify_urls.py
tests/fixtures/: build_parametric.py  parametric_bedroom.usdz  parametric_roomplan.usdz  sample_bedroom.usdz
