[project]
name = "room-designer-backend"
version = "0.1.0"
description = "FastAPI backend skeleton for LiDAR Room Designer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.9",
    "numpy>=2.0.0",
    "usd-core>=25.0",
    "pytest>=8.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat", "ingest", "llm", "solver"]
dev-mode-dirs = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
